--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,19 @@
         </developer>
     </developers>
 
+    <distributionManagement>
+        <repository>
+            <id>deployment</id>
+            <name>Releases</name>
+            <url>https://oss.sonatype.org/content/repositories/releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>deployment</id>
+            <name>Snapshots</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
+
     <scm>
         <connection>scm:git:git@github.com:clemp6r/futuroid.git</connection>
         <developerConnection>scm:git:git@github.com:clemp6r/futuroid.git</developerConnection>
