--- a/pom.xml
+++ b/pom.xml
@@ -25,12 +25,12 @@
 
     <distributionManagement>
         <repository>
-            <id>deployment</id>
+            <id>ossrh</id>
             <name>Releases</name>
             <url>https://oss.sonatype.org/content/repositories/releases/</url>
         </repository>
         <snapshotRepository>
-            <id>deployment</id>
+            <id>ossrh</id>
             <name>Snapshots</name>
             <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
         </snapshotRepository>
@@ -129,6 +129,18 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+
+            <!-- Nexus staging plugin -->
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>1.6</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <serverId>ossrh</serverId>
+                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                </configuration>
             </plugin>
         </plugins>
 
