Update pom.xml: added nexus plugin config

--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,21 @@
         <url>git@github.com:clemp6r/futuroid.git</url>
     </scm>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>1.6</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <serverId>sonatype-nexus-staging</serverId>
+                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <!-- JUnit 4 (for Robolectric tests) -->
         <dependency>
